fixed border for home section on tablets

--- a/src/components/MainPage/About/AboutCard/aboutCard.scss
+++ b/src/components/MainPage/About/AboutCard/aboutCard.scss
@@ -7,6 +7,7 @@
   justify-content: space-around;
   padding: 2rem;
   width: 25rem;
+  height: 26rem;
   gap: 3rem;
   border: 2px solid rgba($logo-color-orange, 0.8);
   background-color: rgba($logo-color-orange, 0.9);
