--- a/src/components/MainPage/Home/home.scss
+++ b/src/components/MainPage/Home/home.scss
@@ -4,19 +4,28 @@
   position: relative;
   border-radius: $border-radius-small;
   box-shadow: $box-shadow-main;
+
+  @include respond(phone) {
+    border-radius: 0;
+  }
 }
 
 .main-container {
   -webkit-clip-path: polygon(35% 0, 100% 0, 100% 100%, 25% 100%);
   clip-path: polygon(35% 0, 100% 0, 100% 100%, 25% 100%);
   height: 100vh;
+  overflow: hidden;
+  position: relative;
+
   @include respond(tab-land) {
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    -webkit-clip-path: none;
+    clip-path: none;
     border-radius: 0.7rem;
     height: 90vh;
   }
   @include respond(phone) {
     border-radius: 0;
+    height: 100vh;
   }
 }
 .house-img {
